# LeafKnow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CHAT_APP.md  autobox_id.db  chat_app.py  chat_app_enhanced.py  chat_engine.py  chat_engine.py.backup  demo_chat_app.py  dev-control.sh  model_configs.json  simple-dev.sh  tailwind.config.js
api/: .gitignore  FINAL_SUMMARY.md  README_ENHANCED_CHAT.md  USAGE_GUIDE.md  agno_analysis_report.py  agno_final_summary.md  api_standalone.sh  backend_tool_caller.py  bridge_events.py  builtin_openai_compat.py  chatsession_api.py  chatsession_mgr.py  config.py  db_mgr.py  documents_api.py  enhanced_chat_app.py  file_tagging_mgr.py  lancedb_mgr.py  main.py  memory_mgr.py  model_capability_confirm.py  model_config_mgr.py  models_api.py  models_builtin.py  models_mgr.py  multivector_mgr.py  myfolders_api.py  myfolders_mgr.py  pyproject.toml  quick_test.py  screening_api.py  screening_mgr.py  search_api.py  search_mgr.py  sqlite.db  tagging_api.py  tagging_mgr.py  task_mgr.py  test_agent_sse.py  test_bridge_stdout.py  (+29 more)
api/agno/agent/: agent.py
api/agno/api/: settings.py
api/agno/eval/: performance.py
api/agno/guardrails/: pii.py
api/agno/os/: config.py  schema.py  utils.py
api/agno/session/: team.py
api/agno/team/: team.py
api/agno/tools/: brandfetch.py  duckdb.py  exa.py  fal.py  github.py  jira.py  mcp.py  mcp_toolbox.py  toolkit.py  user_control_flow.py
api/agno/utils/: mcp.py  message.py  string.py
api/agno_modular/: README.md  README_STREAMING.md  README_USAGE.md  SUMMARY.md  USAGE_GUIDE.md  __init__.py  agent_api.py  agent_factory.py  agent_manager.py  agent_models.py  complete_demo.py  complete_integration_example.py  composer.py  demo.py  examples.py  integration_guide.md  mcp_factory.py  memory_factory.py  multi_provider_adapter.py  simple_demo.py  standalone_demo.py  streaming_api.py  streaming_chat.py  streaming_demo.py  streaming_generator.py  test_integration.py  usage_examples.py  websocket_integration.py
api/mlx_embeddings/: utils.py
api/server_config/postgresql/: .env.example  Dockerfile  build.sh  pg_hba.conf  postgresql.conf  run_dev.sh  run_prod.sh
api/tests/: TEST_REPORT.md
api/tests/agno_modular/: __init__.py  test_agent_factory.py  test_agent_system_config.py  test_composer.py  test_config.py  test_factories.py  test_mcp_factory.py  test_memory_factory.py  test_standalone.py  tests.py
api/tests/mcp/: MCP_PY38_SUMMARY.md  MCP_PYTHON38_SUCCESS.md  README_MCP_PY38.md  example_mcp_agent.py  test_mcp_py38.py  test_mcp_tools_import.py
api/tests/unit/: test_agno.py
api/tools/: calculator.py  co_reading.py  datetime_tools.py  file_search.py  web_search.py
core/: agno_analysis_report.py  agno_analysis_simple.py  chatsession_api.py  chatsession_mgr.py  config.py  db_mgr.py  documents_api.py  main.py  memory_mgr.py  model_capability_confirm.py  model_config_mgr.py  models_api.py  models_mgr.py  multivector_mgr.py  pyproject.toml  task_mgr.py  tool_provider.py  utils.py
core/agent/: chat_core_mgr.py  db_mgr.py  lancedb_mgr.py  memory_mgr.py  model_capability_confirm.py  model_config_mgr.py  models_mgr.py  task_mgr.py  tool_provider.py
core/agno/: debug.py  exceptions.py
core/agno/agent/: __init__.py  agent.py
core/agno/api/: agent.py  api.py  evals.py  os.py  settings.py  team.py  workflow.py
core/agno/culture/: __init__.py  manager.py
core/agno/db/: __init__.py  base.py  utils.py
core/agno/eval/: __init__.py  accuracy.py  performance.py  reliability.py  utils.py
core/agno/guardrails/: __init__.py  base.py  openai.py  pii.py  prompt_injection.py
core/agno/knowledge/: __init__.py  content.py  knowledge.py  utils.py
core/agno/memory/: __init__.py  manager.py
core/agno/models/: base.py  message.py  metrics.py  response.py  utils.py
core/agno/os/: __init__.py  app.py  auth.py  mcp.py  router.py  schema.py  utils.py
core/agno/reasoning/: anthropic.py  azure_ai_foundry.py  deepseek.py  default.py  gemini.py  groq.py  helpers.py  ollama.py  openai.py  vertexai.py
core/agno/run/: agent.py  base.py  cancel.py  messages.py  team.py  workflow.py
core/agno/session/: __init__.py  agent.py  summary.py  team.py  workflow.py
core/agno/team/: __init__.py  team.py
core/agno/tools/: __init__.py  agentql.py  airflow.py  api.py  apify.py  arxiv.py  aws_lambda.py  aws_ses.py  baidusearch.py  bitbucket.py  brandfetch.py  bravesearch.py  brightdata.py  browserbase.py  calcom.py  calculator.py  cartesia.py  clickup.py  confluence.py  crawl4ai.py  (+94 more)
core/knowledge-focus/: chat_engine.py  chatsession_mgr.py  core_standalone.sh  db_mgr.py  model_capability_confirm.py  model_config_mgr.py  models_builtin.py  models_mgr.py  multivector_mgr.py  task_mgr.py  tool_provider.py
core/server/: chatsession_api.py  documents_api.py  main.py  models_api.py
core/tests/: run_tests.py
leaf-know/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/: Cargo.toml  Cargo.toml.test  entitlements.plist  tauri.conf.json
(+767 files in other folders)
