[project]
name = "leaf-know-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "av>=16.0.1",
    "docling>=2.58.0",
    "edge-tts==7.2.1",
    "fastapi>=0.120.0",
    "lancedb>=0.25.2",
    "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.3",
    "pydantic-ai>=1.4.0",
    "sqlmodel>=0.0.27",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
