[package]
name = "leaf-know"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "leaf_know_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-shell = "2"
tauri-plugin-screenshots = "2.2.0"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
# reqwest = "0.12.24"
# tokio = "1.48.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.28"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10.8"
futures = "0.3"
regex = "1.11.1"
glob = "0.3.2"
chrono = "0.4.41"
scopeguard = "1.2.0"
futures-util = "0.3.31"
notify = { version = "8.0.0", features = ["serde"] }
walkdir = "2.5.0"
ignore = "0.4.23"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

