[package]
name = "KnowledgeFocus"
version = "0.1.0"
description = "本机知识库和桌面智能体平台"
authors = ["huozhong.in"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
notify = { version = "8.0.0", features = ["serde"] }
walkdir = "2.5.0"
ignore = "0.4.23"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-macos-permissions = "2.3.0"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10.8"
futures = "0.3"
log = "0.4"
regex = "1.11.1"
glob = "0.3.2"
chrono = "0.4.41"
scopeguard = "1.2.0"
futures-util = "0.3.31"
tauri-plugin-screenshots = "2.2.0"
tauri-plugin-os = "2"

# [target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.3.4" }
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"



